hotfix: 공동모임장도 모임 게시글을 작성할 수 있도록 수정